2006-10-23  Ulrich Weigand  <uweigand@de.ibm.com>

	* g++.dg/other/s390-1.C: New testcase.

2006-10-22  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/20647
	* g++.dg/abi/rtti3.C: New.

2006-10-19  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/div-compare-1.c: New test.

2006-10-19 Ira Rosen  <irar@il.ibm.com>

	Backport from mainline:
        2006-08-07  Victor Kaplansky <victork@il.ibm.com>
        
        PR tree-optimizations/26969
        * gcc.dg/vect/vect.exp: Compile tests prefixed with
        "unswitch-loops" with -funswitch-loops.
        * gcc.dg/vect/unswitch-loops-pr26969.c: New test.

2006-10-18  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-08-25  Richard Guenther  <rguenther@suse.de>

	PR testsuite/28829
	* gcc.dg/pr26570.c: Fix testcase.

2006-10-18  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-08-16  Zdenek Dvorak <dvorakz@suse.cz>

	PR gcov/profile/26570
	* gcc.dg/pr26570.c: New test.

2006-10-18  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-08-25  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/27787
	* g++.dg/template/typename10.C: New.
	* g++.dg/template/lookup4.C: Remove bogus error marker.

2006-10-17  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-05-12  Jakub Jelinek  <jakub@redhat.com>

	PR debug/26881
	* gcc.dg/debug/pr26881.c: New test.

2006-10-17  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-09-07  Andrew Pinski  <pinskia@physics.uc.edu>

	PR C++/28906
	* g++.dg/other/array3.C: New test.
	* g++.dg/other/array4.C: New test.
	* g++.dg/other/array5.C: New test.

2006-10-16  Mark Mitchell  <mark@codesourcery.com>

	PR c++/29435
	* g++.dg/template/sizeof11.C: New test.

2006-10-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	Backport:
	2006-10-14  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.dg/pthread-init-2.c (dg-options): Define _POSIX_C_SOURCE=199506L
	on Solaris 2.5.1 too.
