@@ -1,3 +1,8 @@
+2006-10-23  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/29020
+	* g++.dg/template/friend48.C: New test.
+
 2006-10-23  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* g++.dg/other/s390-1.C: New testcase.
